Add project references for CLI and WebApi test projects
- Added a project reference to Flir.Irma.Cli in Flir.Irma.Cli.Tests.csproj
- Added a project reference to Flir.Irma.WebApi in Flir.Irma.WebApi.Tests.csproj

--- a/src/Flir.Irma.Cli.Tests/Flir.Irma.Cli.Tests.csproj
+++ b/src/Flir.Irma.Cli.Tests/Flir.Irma.Cli.Tests.csproj
@@ -18,4 +18,8 @@
     <Using Include="Xunit" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Flir.Irma.Cli\Flir.Irma.Cli.csproj" />
+  </ItemGroup>
+
 </Project>
