--- a/src/Flir.Irma.WebApi.Tests/Flir.Irma.WebApi.Tests.csproj
+++ b/src/Flir.Irma.WebApi.Tests/Flir.Irma.WebApi.Tests.csproj
@@ -18,4 +18,8 @@
     <Using Include="Xunit" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Flir.Irma.WebApi\Flir.Irma.WebApi.csproj" />
+  </ItemGroup>
+
 </Project>
