feat: Implement initial structure for Irma Web API with conversation and chat functionality
- Added SqliteWebApplicationFactory for testing with in-memory SQLite database.
- Removed placeholder UnitTest1 class.
- Created ChatController for handling chat requests and streaming responses.
- Developed ConversationsController for managing conversation creation and retrieval.
- Introduced SystemController for health checks and version information.
- Established IrmaDbContext for Entity Framework Core interactions.
- Defined ConversationEntity and MessageEntity for database models.
- Implemented ConversationState and MessageRole enums for conversation and message roles.
- Added mapping extensions for converting entities to DTOs.
- Updated project file to include necessary Entity Framework Core packages.
- Created ApplicationMetadata for application information retrieval.
- Developed SseWriter for server-sent events handling.
- Created initial migration for Conversations and Messages tables.
- Defined models for chat requests, conversations, health checks, and messages.
- Implemented ConversationService for business logic related to conversations.
- Configured application startup with necessary services and middleware.
- Updated appsettings for database connection configuration.

--- a/src/Flir.Irma.WebApi/appsettings.Development.json
+++ b/src/Flir.Irma.WebApi/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost,1433;Database=Irma;User Id=sa;Password=IrmaPassword!123;TrustServerCertificate=True;MultipleActiveResultSets=True"
   }
 }
