--- a/src/Flir.Irma.Cli/Flir.Irma.Cli.csproj
+++ b/src/Flir.Irma.Cli/Flir.Irma.Cli.csproj
@@ -6,5 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="System.CommandLine" Version="2.0.0-rc.2.25502.107" />
+  </ItemGroup>
 
 </Project>
