--- a/src/Flir.Irma.WebApi/appsettings.json
+++ b/src/Flir.Irma.WebApi/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost,1433;Database=Irma;User Id=sa;Password=IrmaPassword!123;TrustServerCertificate=True;MultipleActiveResultSets=True"
+  },
   "AllowedHosts": "*"
 }
